--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -6,32 +6,33 @@
 
 {% block content %}
 <header>
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <span class="navbar-brand mb-0 h1">Ponto Comum</span>
       <form class="d-flex">
-            <a class="nav-link" href="#" tabindex="-1">Criar conta</a>
-            <a class="nav-link" href="#" tabindex="-1">sobre</a>
+            <a class="nav-link" href="#" tabindex="-1" style="color: aliceblue;">Criar conta</a>
+            <a class="nav-link" href="#" tabindex="-1" style="color: aliceblue;">sobre</a>
       </form>
     </div>
   </div>
 </nav>
 </header>
-<main>
-<div class="input-group input-group-sm mb-3"></div>
-    <form action="{% url 'home'%}" method="post">
+<main class="vh-100 d-flex flex-column justify-content-center  overflow-hidden">
+<div class="d-flex flex-row justify-content-center input-group input-group-sm mb-3">
+    <form action="{% url 'login'%}" method="post" class="d-flex flex-column justify-content-center bg-light">
         {% csrf_token %}
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Usuário</label>
-                <input name="user-login" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="exemple@gmail.com ou exemple123">
-                <div id="emailHelp" class="form-text">Seu email não será compartilhado.</div>
+                <input name="user-login" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Senha</label>
-                <input name="user-psw-login" type="password" class="form-control" id="exampleInputPassword1">
             </div>
             <button type="submit" class="btn btn-primary">Entra</button>
-            </form>
+    </form>
+</div>
+<div class="d-flex justify-content-center">
     <a href="{% url 'forgotPws' %}">esqueci minha senha</a>
+</div>
 </main>
     {% endblock content %}
