--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         {%endblock title%}
     </title>
 </head>
-<body>
+<body class="h-100 w-100">
     {%block content%}
     {%endblock content%}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
