--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -23,10 +23,11 @@
         {% csrf_token %}
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Usuário</label>
-                <input name="user-login" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input name="user-login" class="form-control" id="exampleInputEmail1" required aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Senha</label>
+                <input name="user-login-psw" type="password" class="form-control" id="exampleInpuPSW" required aria-describedby="passwordHelp">
             </div>
             <button type="submit" class="btn btn-primary">Entra</button>
     </form>
