feact/login-view-home

--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -27,7 +27,7 @@
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Senha</label>
-                <input name="user-login" type="password" class="form-control" id="" required aria-describedby="passwordHelp">
+                <input name="user-psw" type="password" class="form-control" id="" required aria-describedby="passwordHelp">
 
             </div>
             <button type="submit" class="btn btn-primary">Entra</button>
