feact/page-home-content

--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="navbarScroll">
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" onclick="atualizarConteudo()" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="#">Nova Publicação</a>
@@ -37,8 +37,6 @@
 </nav>
 </header>
 <main class="overflow-auto vh-100">
-  {% for blog in blogs %}
-    <div>{{ blog.title }}</div>
-  {% endfor %}
+<div></div>
 </main>
 {% endblock content%}
