--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{%load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -13,5 +15,6 @@
     {%block content%}
     {%endblock content%}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 </body>
 </html>
