--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -17,10 +17,10 @@
   </div>
 </div>
 </nav>
-<div class="container m-0">
+<div class="">
 {% if user_exist is None%}
 <div class="alert alert-primary" role="alert">
-  A simple primary alert—check it out!
+  Informe seu usuário e senha para login
 </div>
 {% elif not user_exist%}
   <div class="alert alert-danger" role="alert">
