--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -4,7 +4,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#" onclick="">Navbar scroll</a>
+    <a class="navbar-brand" href="#" onclick="">Papo Comum</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,10 +21,10 @@
             Minha área
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-            <li><a class="dropdown-item" href="#">Minha publicações</a></li>
-            <li><a class="dropdown-item" href="#">Meus dados</a></li>
+            <li><a class="dropdown-item" onclick="partialMyBlogs()" href="#">Minha publicações</a></li>
+            <li><a class="dropdown-item" onclick="partialMyData()" href="#">Meus dados</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#" style="color: red;">Sair</a></li>
+            <li><a class="dropdown-item"  href="#" style="color: red;">Sair</a></li>
           </ul>
         </li>
       </ul>
@@ -37,6 +37,8 @@
 </nav>
 </header>
 <main class="overflow-auto vh-100">
-<div class="container-home"></div>
+<div class="container">
+
+</div>
 </main>
 {% endblock content%}
