--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 
 {% block content%}
-<header>
+<header class="fixed-top">
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#" onclick="">Papo Comum</a>
@@ -36,8 +36,8 @@
   </div>
 </nav>
 </header>
-<main class="overflow-auto vh-100">
-<div class="container">
+<main class="overflow-auto vh-100 d-flex flex-row mt-5">
+<div class="container mt-4" id="main-container">
 
 </div>
 </main>
