--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -29,21 +29,27 @@
 {% endif %}
 </div>
 </header>
-<main class="vh-100 d-flex flex-column justify-content-center  overflow-hidden">
-<div class="d-flex flex-row justify-content-center input-group input-group-sm mb-3">
-    <form action="{% url 'login'%}" method="post" class=" form-control d-flex flex-column justify-content-center bg-light">
-        {% csrf_token %}
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Usuário</label>
-                <input name="user-login" class="form-control" id="" required aria-describedby="emailHelp">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Senha</label>
-                <input name="user-psw" type="password" class="form-control" id="" required aria-describedby="passwordHelp">
-            </div>
-            <button type="submit" class="btn btn-primary">Entra</button>
-    </form>
-</div>
+<main class="vh-100">
+  <div class="container" id="container-login">
+   <div class="row">
+    <div class="col-md-4 col-12 mx-auto">
+      <form action="{% url 'login'%}" method="post" class="form-control">
+          {% csrf_token %}
+          <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Usuário</label>
+          <input name="user-login" class="form-control" id="" required aria-describedby="emailHelp">
+          </div>
+         <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Senha</label>
+          <input name="user-psw" type="password" class="form-control" id="" required aria-describedby="passwordHelp">
+          </div>
+          <div class="d-flex flex-row justify-content-center mb-3">
+          <button type="submit" class="btn btn-primary  btn-lg">Entra</button>
+          </div>
+          </form>
+    </div>
+   </div>
+    </div>
 <div class="d-flex justify-content-center">
     <a href="{% url 'forgotPws' %}">esqueci minha senha</a>
 </div>
