--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -30,10 +30,13 @@
 </div>
 </header>
 <main class="vh-100">
-  <div class="container" id="container-login">
+  <div class="container p-4" id="container-login">
    <div class="row">
     <div class="col-md-4 col-12 mx-auto">
-      <form action="{% url 'login'%}" method="post" class="form-control">
+      <form action="{% url 'login'%}" method="post" class="form-control d-flex flex-column aling-items-center">
+          <div class="d-flex justify-content-center" >
+              <h1>sign in</h1>
+          </div>
           {% csrf_token %}
           <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Usuário</label>
@@ -51,7 +54,7 @@
    </div>
     </div>
 <div class="d-flex justify-content-center">
-    <a href="{% url 'forgotPws' %}">esqueci minha senha</a>
+    <a href="{% url 'forgot-password' %}">esqueci minha senha</a>
 </div>
 </main>
 {% endblock content %}
