feact/api-page page create user init

--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -4,7 +4,8 @@
 <header class="fixed-top">
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#" onclick="">Papo Comum</a>
+    <a class="navbar-brand" href="#" onclick="">Papo Comum <img width="48" height="48" src="https://img.icons8.com/color/48/chat--v1.png" alt="chat--v1"/>  
+</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
